# django-cked

./: AUTHORS.rst  CHANGES.rst  README.md  README.rst  pyproject.toml  setup-get.py  setup.py
cked/: default_settings.py  fields.py
cked/elf/: connector.py
cked/templates/cked/: elfinder.html
docs/: conf.py  index.rst  setup.rst  usage.rst
src/cked/: __init__.py  conf.py  default_settings.py  fields.py  urls.py  views.py  widgets.py
src/cked/elf/: connector.py  const.py  utils.py
src/cked/static/cked/ckeditor/: build-config.js  ckeditor.js
src/cked/static/cked/ckeditor/lang/: af.js  ar.js  az.js  bg.js  bn.js  bs.js  ca.js  cs.js  cy.js  da.js  de-ch.js  de.js  el.js  en-au.js  en-ca.js  en-gb.js  en.js  eo.js  es-mx.js  es.js  et.js  eu.js  fa.js  fi.js  fo.js  fr-ca.js  fr.js  gl.js  gu.js  he.js  hi.js  hr.js  hu.js  id.js  is.js  it.js  ja.js  ka.js  km.js  ko.js  (+30 more)
src/cked/static/cked/ckeditor/skins/moono-lisa/: editor.css  editor_gecko.css  editor_ie.css  editor_ie8.css  editor_iequirks.css
